.provarCaches/00D6C0000000xA6UAI/objects/jurisdiction__c.object
<CustomObject>
    <fields>
        <fullName>APPL_SRC_CD__c</fullName>
        <label>APPL_SRC_CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>CITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTY__c</fullName>
        <label>COUNTY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSREG_CODE__c</fullName>
        <label>CSREG_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATE_CHANG__c</fullName>
        <label>DATE_CHANG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DIV_CODE__c</fullName>
        <label>DIV_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Last_Update_Ts__c</fullName>
        <label>DW Last Update Ts</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ECODE__c</fullName>
        <label>ECODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITY__c</fullName>
        <label>ENTITY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <label>FIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSTER_CODE__c</fullName>
        <label>HSTER_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSTER_DIV__c</fullName>
        <label>HSTER_DIV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>STATE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP_CLASS__c</fullName>
        <label>ZIP_CLASS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>ZIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jurisdiction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ZIP__c</columns>
        <columns>ECODE__c</columns>
        <columns>ENTITY__c</columns>
        <columns>FIPS__c</columns>
        <columns>CITY__c</columns>
        <columns>STATE__c</columns>
        <columns>ZIP_CLASS__c</columns>
        <columns>DIV_CODE__c</columns>
        <columns>CSREG_CODE__c</columns>
        <columns>COUNTY__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Jurisdiction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jurisdictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>